# multicam_airflow_pipeline

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
airflow_examples/: example_dag.py  example_dag_JP.py  example_pool.py
multicamera_airflow_pipeline/jonah_240909/: calibration.py  default_config.yaml
multicamera_airflow_pipeline/jonah_241112/: calibration.py  default_config_v2.yaml
multicamera_airflow_pipeline/tim_240731/: calibration.py  default_config.yaml  default_config_v2.yaml  tim_config_nov24.yaml
multicamera_airflow_pipeline/utils/: datetime_utils.py
notebooks/: 0.0.1-test-camera-sync-submit-o2-job.ipynb  0.1-test-sync-cameras-to-openephys.ipynb  0.1.1-test-ephys-sync-submit-job.ipynb  0.2-spikesorting.ipynb  1.0-test-2d-prediction-function-tensorrt.ipynb  1.0-test-2d-prediction-function.ipynb  1.1-test-2d-prediction-function-tensorrt.ipynb  1.1.1-test-2D-prediction-submit-job-tensorrt.ipynb  2.0-test-camera-calibration-function.ipynb  2.0.1-test-camera-calibration-sync-submit-job.ipynb  3.0-test-triangulation-function.ipynb  3.0.1-test-triangulation-sync-submit-job.ipynb  4.0-test-train-gimbal.ipynb  4.0.1-test-gimbal-submit-job.ipynb  5.0-size-normalization.ipynb  6.0-arena-alignment.ipynb  6.0.1-test-arena-alignment-submit-job.ipynb  8.0-continuous-features.ipynb  8.0.1-test-continuous-features-submit-job.ipynb  test-convert-models.ipynb  test-old-tensorrt-conversion.ipynb  test-submit-job.ipynb
scripts/: analyze_jobs_o2.py  export_logs_from_airflow.py  install_mmdeploy.sh  install_mmdeploy_v2.sh
(+136 files in other folders)
