[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "multicamera_airflow_pipeline"
version = "0.0.1"
description = "Pipelines for data analysis on o2 and airflow"
authors = [
  { name = "Tim Sainburg" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.8,<4.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["multicamera_airflow_pipeline"]
force_sort_within_sections = true
